@@ -925,7 +925,9 @@ ${SIPDOMAIN}         * SIP destination domain of an inbound call (if appropriate
 ${SIPFROMDOMAIN}       Set SIP domain on outbound calls
 ${SIPUSERAGENT}      * SIP user agent (deprecated)
 ${SIPURI}            * SIP uri
-${SIP_CODEC}           Set the SIP codec for a call
+${SIP_CODEC}           Set the SIP codec for an inbound call
+${SIP_CODEC_INBOUND}   Set the SIP codec for an inbound call
+${SIP_CODEC_OUTBOUND}  Set the SIP codec for an outbound call
 ${SIP_URI_OPTIONS}   * additional options to add to the URI for an outgoing call
 ${RTPAUDIOQOS}         RTCP QoS report for the audio of this call
 ${RTPVIDEOQOS}         RTCP QoS report for the video of this call
